// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check render of checked in icon for checked in user 1`] = `
<Text
  allowFontScaling={false}
  selectable={false}
  style={
    [
      {
        "color": "green",
        "fontSize": 20,
      },
      undefined,
      {
        "fontFamily": "FontAwesome5Free-Solid",
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      {
        "fontWeight": "900",
      },
    ]
  }
>
  
</Text>
`;

exports[`check render of checked in icon for non checked in user 1`] = `
<Text
  allowFontScaling={false}
  selectable={false}
  style={
    [
      {
        "color": "red",
        "fontSize": 20,
      },
      undefined,
      {
        "fontFamily": "FontAwesome5Free-Solid",
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      {
        "fontWeight": "900",
      },
    ]
  }
>
  
</Text>
`;
